Details
-
Bug
-
Resolution: Done
-
P2: Important
-
6.2.0
-
None
-
-
350c6b6f970de73d1e1fda91ec453f8c7255138f (qt/qtmultimedia/dev) cdad19d2f0145b3532e39070b3692bc9d7693929 (qt/qtmultimedia/6.2)
Description
Steps to reproduce:
1. Run player example on Android device
2. Play i.e. MP4 video
3. Select fullscreen mode
4. Try to return from fullscreen
Expected:
Returning from fullscreen mode should take place without any issues
Actual:
The video section can't be found after returning from fullscreen
Attachments
Issue Links
- resulted from
-
QTBUG-93460 Test Android Examples
-
- Closed
-