Fix back button on android video widget

Handling a back button with in Android in VideoWidget was not being
handled. The app would get back to previous screen but the VideoWidget
did not stop fullscreen mode and would continue reproducing behind the
UI.

Fixes: QTBUG-96750
Change-Id: I2b9fbfc91275cf024e8f5f54f368eb4d96f705b5
Reviewed-by: Lars Knoll <lars.knoll@qt.io>
Reviewed-by: Assam Boudjelthia <assam.boudjelthia@qt.io>
(cherry picked from commit 350c6b6f970de73d1e1fda91ec453f8c7255138f)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>